--- a/bug-tracker-frontend/src/css/WelcomePage.css
+++ b/bug-tracker-frontend/src/css/WelcomePage.css
@@ -71,3 +71,35 @@
   .get-started:hover {
     background-color: #52b7e0;
   }
+
+  .faded {
+    opacity: 0.3;
+    transition: opacity 0.3s ease;
+  }
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1050;
+  }
+  .modal-content {
+    z-index: 1100;
+    animation: fadeIn 0.3s ease;
+    background: white;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
